--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@ Make a web page.
   <div class="container">
     
     <header>
-      <h1>Dummy Corporation, LLC</h1>
+      <h1 id="title">Dummy Corporation, LLC</h1>
       <p id="header_tagline">This company explains everything you need to know about CSS</p>
     </header>
     
     <div class="content">
       <aside>
           <nav>
-            <h1>Navigation Menu 1</h1>
+            <h1>Week 3</h1>
             <ul>
               <li><a href="#">Lorem ipsum</a></li>
-              <li><a href="#">Countdown timer</a></li>
+              <li><a href="#">Item 2</a></li>
               <li><a href="#">Item 3</a></li>
               <li><a href="#">Item 4</a></li>
               <li><a href="#">Item 5</a></li>
