--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ Make a web page.
       
       <section>
         <h1>Lorem ipsum</h1>
-        <p class="para_section">
+        <p class="section_para">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. At ultrices mi tempus imperdiet nulla malesuada pellentesque. Ultricies tristique nulla aliquet enim. Sed viverra tellus in hac habitasse platea dictumst vestibulum rhoncus. Erat imperdiet sed euismod nisi porta lorem mollis. Odio tempor orci dapibus ultrices in iaculis. Cursus euismod quis viverra nibh. Sed viverra ipsum nunc aliquet bibendum enim facilisis gravida. Blandit volutpat maecenas volutpat blandit aliquam.
         </p>
         <br>
