--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ Make a web page.
           <nav>
             <h1>Week 3</h1>
             <ul>
-              <li><a href="#">Lorem ipsum</a></li>
+              <li><a href="https://dictionary.com" target="_blank">Dictionary.com</a></li>
               <li><a href="#">Item 2</a></li>
               <li><a href="#">Item 3</a></li>
               <li><a href="#">Item 4</a></li>
