--- a/index.html
+++ b/index.html
@@ -1,17 +1,10 @@
-<!--
-Make a web page.
-- Add html, head, and body tags
-- In the body add a header, article, section, footer
-- In each of those add some divs, paragraphs, and spans of text.
-- Apply classes and ids to html elements
--->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CharlesBFerguson</title>
+  <link rel="shortcut icon" type="image/png" href="assets/favicon.png">
   <link rel="stylesheet" href=assets/stylesheets/main.css>
   <link href="https://fonts.googleapis.com/css?family=Fascinate+Inline&display=swap" rel="stylesheet">
 </head>
